--- a/letterboxdapp/package.json
+++ b/letterboxdapp/package.json
@@ -13,6 +13,7 @@
     "http": "0.0.1-security",
     "http-status": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
+    "puppeteer": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node server/server.js",
+    "server": "nodemon server/server.js",
     "all": "run-p server start"
   },
   "secure": false,
