added DatabaseBuilders file for Santi

--- a/letterboxdapp/package.json
+++ b/letterboxdapp/package.json
@@ -16,6 +16,9 @@
     "http-status": "^1.4.2",
     "isomorphic-fetch": "^2.2.1",
     "json-formatter-js": "^2.3.4",
+    "line-reader": "^0.4.0",
+    "prompt": "^1.0.0",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^5.0.0",
     "react": "^16.13.1",
     "react-burger-menu": "^2.7.1",
